# kernel-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config
client/: .gitignore  Cargo.toml  build.rs
client/kdmapper/: CMakeLists.txt  exports.cpp  exports.h  intel_driver.cpp  intel_driver.hpp  kdmapper.cpp  kdmapper.hpp  main.cpp  portable_executable.cpp  service.cpp
client/src/: cleaner.rs  driver.rs  kdmapper.rs  lib.rs  main.rs  tests.rs  types.rs  util.rs
driver/: .gitignore  Cargo.toml  Makefile.toml  build.rs  delete.bat  remote_client.bat  remote_map.bat
driver/src/: dispatch.rs  lib.rs  shared.rs
driver/src/dispatch/: handler.rs  hook.rs  mod.rs  types.rs
driver/src/hooks/: mod.rs
driver/src/include/: bindings.h  bindings.rs  include.rs  mod.rs  raw.rs
driver/src/interop/: bindings.rs  clear.cpp  clear.h  include.h  mod.rs
driver/src/kernel/: error.rs  hook.rs  mod.rs  process.rs  util.rs
driver/src/util/: alloc.rs  mod.rs  string.rs  vsb.rs
kernel-client/: Cargo.toml
kernel-client/src/: lib.rs  types.rs  util.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  service.rs
src/: lib.rs
src/dispatch/: handler.rs  hook.rs  mod.rs  types.rs
src/hooks/: mod.rs
src/include/: bindings.h  bindings.rs  include.rs  mod.rs  ntapi.h  ntstructs.h  raw.rs
src/kernel/: error.rs  hook.rs  mod.rs  process.rs  util.rs
src/util/: alloc.rs  list_entry.rs  log.rs  mod.rs  string.rs
