[package]
name = "driver"
version = "0.1.0"
authors = ["not-matthias", "rmccrystal"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
kernel-alloc = "0.1.0"
obfstr = "0.1.1"
log = "0.4.11"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "ntdef"
]

[build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
bindgen = "0.56.0"