[package]
name = "kernel-client"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.38"
log = "0.4.13"
env_logger = "0.8.2"
rand = "0.8.4"
kdmapper = { git = "https://github.com/rmccrystal/kdmapper-rs", features = ["disable-output"] }
memflow = "0.1.5"
memflow-win32 = "0.1.5"