[package]
name = "kernel-client"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

[features]
# If this is enabled the driver will remap every time it loads
remap = []
debug = []

[profile.release]
panic = "abort"

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.38"
log = "0.4.13"
env_logger = "0.8.2"
rand = "0.8.4"
kdmapper = { git = "https://github.com/rmccrystal/kdmapper-rs", features = ["disable-output"] }
memlib = { git = "https://github.com/rmccrystal/memlib-rs", features = ["kernel"] }
pelite = "0.9.0"
