[package]
name = "driver"
version = "0.1.0"
authors = ["not-matthias", "rmccrystal"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.11", features = ["release_max_level_off"] }
#log = { version = "0.4.11", features = ["max_level_off"] }
winkernel = { path = "../../winkernel-rs" }

[build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
