[package]
name = "driver"
version = "0.1.0"
authors = ["not-matthias", "rmccrystal"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.11", features = ["release_max_level_off"] }
# TODO: Make this a git dep
winkernel = { path = "../../winkernel-rs" }
cstr_core = "0.2.4"

[build-dependencies]
winreg = "0.7.0"
anyhow = "1.0.45"