[package]
name = "kernel-client"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }
anyhow = "1.0.38"
log = "0.4.13"
postcard = { version = "0.5.1", features = ["alloc"] }
serde = { version = "1.0.114", features = ["derive"] }

