[package]
name = "kernel-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
futures = "0.3.16"
tarpc = { git = "https://github.com/google/tarpc", features = ["full"] }
tokio = { version = "1.10.0", features = ["macros"] }
kernel-client = { path = "../client" }
tokio-serde = "0.8.0"
log = "0.4.14"
env_logger = "0.9.0"
winutil = { path = "../../winutil" }